Fix: Weird behavior in AllMoviesPage.cs [No interntet logo image] fixed. Refactor: Some minor changes.

--- a/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
@@ -271,7 +271,7 @@
                 Grid.ColumnSpan="2"
                 HeightRequest="300"
                 HorizontalOptions="Center"
-                IsVisible="{Binding MsgVisible, Mode=TwoWay}"
+                IsVisible="{Binding MsgVisible}"
                 Source="NoInternet.png"
                 WidthRequest="300" />
 
