--- a/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/MovieDetailsPage.xaml
@@ -40,11 +40,19 @@
                             HorizontalOptions="FillAndExpand"
                             VerticalOptions="FillAndExpand">
 
-                            <ffimage:CachedImage
+                            <!--<ffimage:CachedImage
                                 AbsoluteLayout.LayoutBounds="0,0,1,0.7"
                                 AbsoluteLayout.LayoutFlags="All"
                                 BitmapOptimizations="True"
                                 DownsampleToViewSize="True"
+                                Scale="3"
+                                HeightRequest="350"
+                                HorizontalOptions="FillAndExpand"
+                                Source="{Binding BackdropPath}"
+                                WidthRequest="500" />-->
+                            <Image
+                                AbsoluteLayout.LayoutBounds="0,0,1,0.7"
+                                AbsoluteLayout.LayoutFlags="All"
                                 Scale="3"
                                 HeightRequest="350"
                                 HorizontalOptions="FillAndExpand"
@@ -123,13 +131,24 @@
                                 </Grid>
                             </StackLayout>
 
-                            <ffimage:CachedImage
+                            <!--<ffimage:CachedImage
                                 AbsoluteLayout.LayoutBounds="0, 0.6, 0.4, 0.6"
                                 AbsoluteLayout.LayoutFlags="All"
                                 x:Name="PosterPath"
                                 Margin="8,0,8,0"
                                 BitmapOptimizations="True"
                                 DownsampleToViewSize="True"
+                                HeightRequest="200"
+                                HorizontalOptions="Start"
+                                Source="{Binding PosterPath}"
+                                Style="{StaticResource ImageInsideCardStyle}"
+                                WidthRequest="200" />-->
+                            
+                            <Image
+                                AbsoluteLayout.LayoutBounds="0, 0.6, 0.4, 0.6"
+                                AbsoluteLayout.LayoutFlags="All"
+                                x:Name="PosterPath"
+                                Margin="8,0,8,0"
                                 HeightRequest="200"
                                 HorizontalOptions="Start"
                                 Source="{Binding PosterPath}"
@@ -163,7 +182,11 @@
                                     <StackLayout.GestureRecognizers>
                                         <TapGestureRecognizer Tapped="PlayTrailer_Tapped" />
                                     </StackLayout.GestureRecognizers>
-                                    <ffimage:CachedImage
+                                    <!--<ffimage:CachedImage
+                                        HeightRequest="35"
+                                        Source="YoutubeBtn.png"
+                                        WidthRequest="35" />-->
+                                    <Image
                                         HeightRequest="35"
                                         Source="YoutubeBtn.png"
                                         WidthRequest="35" />
@@ -197,23 +220,6 @@
                             Text="Add To Favorites List"
                             TextColor="White"/>
 
-
-
-
-                        <!--<StackLayout
-                            x:Name="AddToFavLayout"
-                            Margin="16"
-                            BackgroundColor="#44FFFFFF"
-                            HorizontalOptions="FillAndExpand">
-                            <Label
-                                Margin="16"
-                                FontAttributes="Bold"
-                                FontSize="Medium"
-                                HorizontalTextAlignment="Center"
-                                Text="Add To Favorites List"
-                                TextColor="White" />
-                        </StackLayout>-->
-
                         <Button 
                             x:Name="QuitFromFavLayout"
                             Margin="16"
@@ -225,21 +231,6 @@
                             TextColor="White" 
                             HorizontalOptions="FillAndExpand" />
 
-                        <!--<StackLayout-->
-                            <!--x:Name="QuitFromFavLayout"
-                            Margin="16"
-                            BackgroundColor="#FF0000"
-                            
-                            HorizontalOptions="FillAndExpand"
-                            >
-                            <Label
-                                Margin="16"
-                                FontAttributes="Bold"
-                                FontSize="Medium"
-                                HorizontalTextAlignment="Center"
-                                Text="Quit from the favorites list"
-                                TextColor="White" />
-                        </StackLayout>-->
                     </StackLayout>
                     <!--<helpers:AdMobView AdUnitId="ca-app-pub-3940256099942544/6300978111" />-->
                     <helpers:AdMobView AdUnitId="ca-app-pub-7678114811413714/1246889210" />
