--- a/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
+++ b/SSFR_Movies/SSFR_Movies/Views/AllMoviesPage.xaml
@@ -6,9 +6,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:ffimage="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
     xmlns:helpers="clr-namespace:SSFR_Movies.Helpers"
+    xmlns:vm="clr-namespace:SSFR_Movies.ViewModels"    
+    x:DataType="vm:AllMoviesPageViewModel"
     Title="SSFR Movies Home"
-    BackgroundColor="#161513"
-    >
+    BackgroundColor="#161513">
 
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -17,13 +18,14 @@
     </ContentPage.Resources>
 
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout CompressedLayout.IsHeadless="True">
 
             <FlexLayout
                 x:Name="GenresContainer"
                 AlignContent="Center"
                 BackgroundColor="#272B2E"
-                Direction="Column">
+                Direction="Column"
+                CompressedLayout.IsHeadless="True">
 
                 <Grid CompressedLayout.IsHeadless="True" FlexLayout.AlignSelf="Start">
                     <Grid.ColumnDefinitions>
@@ -42,7 +44,7 @@
                         HeightRequest="40"
                         HorizontalScrollBarVisibility="Never">
 
-                        <FlexLayout Direction="Row">
+                        <FlexLayout Direction="Row" CompressedLayout.IsHeadless="True">
                             <Frame Style="{StaticResource FramesStyle}">
 
                                 <Label
@@ -268,6 +270,7 @@
 
             <Image
                 x:Name="MessageImg"
+                x:DataType="vm:AllMoviesPageViewModel"
                 Grid.ColumnSpan="2"
                 HeightRequest="300"
                 HorizontalOptions="Center"
@@ -276,6 +279,7 @@
                 WidthRequest="300" />
 
              <Label
+                x:DataType="vm:AllMoviesPageViewModel"
                 x:Name="Message"
                 Margin="0,5,0,0"
                 FontAttributes="Bold"
@@ -289,6 +293,7 @@
             <ActivityIndicator
                 x:Name="activityIndicator"
                 HeightRequest="40"
+                x:DataType="vm:AllMoviesPageViewModel"
                 VerticalOptions="CenterAndExpand"
                 HorizontalOptions="CenterAndExpand"
                 IsRunning="{Binding IsRunning}"
@@ -298,9 +303,9 @@
 
             <CollectionView x:Name="MoviesList" IsVisible="{Binding ListVisible}" ItemsSource="{Binding AllMoviesList}" Visual="Material" WidthRequest="{Binding Source={x:Reference Content}, Path= WidthRequest}">
                 <CollectionView.ItemTemplate>
-                    <DataTemplate>
+                    <DataTemplate  x:DataType="vm:AllMoviesPageViewModel">
                         <StackLayout CompressedLayout.IsHeadless="True">
-                            <helpers:CustomViewCell HeightRequest="350"/>
+                            <helpers:CustomViewCell HeightRequest="350" CompressedLayout.IsHeadless="True"/>
                         </StackLayout>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
